<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_text_multilanguage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Message"
        android:background="#6A7CE1"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txtDangki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_message"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/edt_text_multilanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edtTen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/show"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/txtDangki"/>

    <EditText
        android:id="@+id/edtTaiKhoang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_show"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/edtTen"/>

    <EditText
        android:id="@+id/edtMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_show_message"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/edtTaiKhoang"/>

    <Button
        android:id="@+id/btnNhan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        android:textSize="30sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtMatKhau"/>

    <TextView
        android:id="@+id/txtThongTin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_message"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:background="#E4D230"
        app:layout_constraintTop_toBottomOf="@id/btnNhan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>